--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="main-header">
-  <a href="/#coaching">Coaching</a>
-  <a href="/#speaking">Speaking</a>
-  <a href="/#writing">Writing</a>
-  <a href="/#books">Books</a>
+  <a href="/#coaching" class="faux-underline-large">Coaching</a>
+  <a href="/#speaking" class="faux-underline-large">Speaking</a>
+  <a href="/#writing" class="faux-underline-large">Writing</a>
+  <a href="/#books" class="faux-underline-large">Books</a>
 </header>
