--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="/assets/application.css" />
   <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
