--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -85,17 +85,19 @@ section:eq(2) {
 
 section {
   padding: 80px 0px; }
+  section.purple-section {
+    background: #f3f0f4; }
   section .section-content {
     max-width: 950px;
     padding: 0px 20px;
     margin: 0px auto; }
   section .border {
-    width: 30px;
+    width: 130px;
     margin: 0px auto;
     display: block;
-    background: #333;
     height: 3px;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    background: #32004b; }
 
 header {
   top: 0px;
@@ -108,17 +110,11 @@ header {
   header a {
     color: rgba(0, 0, 0, 0.8);
     display: inline-block;
-    padding: 0 5px; }
-
-.pre-footer {
-  padding: 30px 44px;
-  text-align: center; }
-  .pre-footer .footer-heading {
+    padding: 0px;
+    margin: 0px 10px;
     font-family: "montserrat", sans-serif;
     letter-spacing: 1px;
-    margin-bottom: 4px; }
-  .pre-footer img {
-    height: 80px; }
+    line-height: 150%; }
 
 footer {
   text-align: center;
@@ -129,37 +125,47 @@ footer {
 .wrapper {
   margin: 0px auto; }
 
-.foreground {
-  max-width: 800px;
-  padding: 0px 20px;
-  margin: 0px auto; }
+.separate {
+  background: #32004b;
+  height: 20px;
+  width: 100%; }
 
-.hero-unit {
+.hero-unit, .large-footer {
   position: relative;
-  padding: 0px 0px 109px 0px;
-  text-align: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top center;
-  z-index: 3; }
-  .hero-unit h1 {
-    font-size: 69px;
+  padding-bottom: 50px;
+  text-align: center; }
+  .hero-unit h1, .large-footer h1 {
     padding-top: 71px;
-    margin-bottom: 1px; }
-  .hero-unit h1, .hero-unit h3, .hero-unit .border {
+    margin-bottom: 10px;
+    font-weight: normal;
+    text-transform: none; }
+  .hero-unit h1, .hero-unit h3, .hero-unit .border, .large-footer h1, .large-footer h3, .large-footer .border {
     z-index: 2;
     position: relative; }
-  .hero-unit h3 {
+  .hero-unit h3, .large-footer h3 {
     margin: 0px auto;
-    margin-bottom: 20px;
-    font-size: 18px; }
-  .hero-unit .border {
+    font-size: 24px;
+    font-weight: normal;
+    text-transform: none;
+    max-width: 533px;
+    margin-top: 20px; }
+  .hero-unit .border, .large-footer .border {
     width: 38px;
     margin: 0 auto;
     height: 4px;
     margin-bottom: 10px;
     margin-top: 10px;
     background: white; }
+  .hero-unit p, .large-footer p {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 533px;
+    text-align: left; }
+
+.large-footer .portrait {
+  margin-bottom: 20px; }
+.large-footer h1 {
+  font-size: 48px; }
 
 .more-info .section-content .client-section {
   text-align: center;
@@ -169,7 +175,10 @@ footer {
   -moz-column-width: 180px;
   -webkit-column-width: 180px;
   column-width: 180px;
-  margin: 0px auto; }
+  margin: 0px auto;
+  font-size: 16px; }
+  .more-info .section-content .client-section a {
+    color: black; }
 .more-info .section-content .info-section-group {
   margin-bottom: 20px; }
   .more-info .section-content .info-section-group .info-section {
@@ -194,17 +203,19 @@ footer {
 
 .item-subheading {
   font-size: 14px;
-  line-height: 144%;
-  text-align: left; }
+  text-align: left;
+  line-height: 144%; }
   .item-subheading.large-subheading {
     font-size: 16px; }
 
-.item-supheading {
+.small-note, .item-supheading {
   font-size: 14px;
   font-style: italic;
-  color: #8B8989;
-  margin-top: -6px;
-  text-align: left; }
+  color: #8B8989; }
+
+.item-supheading {
+  text-align: left;
+  margin-top: -8px; }
 
 .case-studies {
   text-align: center; }
@@ -230,6 +241,25 @@ footer {
       background-position: top center;
       margin-bottom: 10px; }
 
+.font-heading {
+  color: #32004b;
+  margin-bottom: 10px; }
+
+.more-section-group {
+  text-align: center; }
+  .more-section-group .more-section {
+    width: 30%;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0px 2% 17px; }
+    .more-section-group .more-section:first-child {
+      margin-left: 0px; }
+    .more-section-group .more-section:last-child {
+      margin-left: 0px; }
+    .more-section-group .more-section .item-heading {
+      margin-bottom: 5px;
+      text-align: center; }
+
 .talks {
   text-align: center; }
   .talks .section-content {
@@ -250,6 +280,50 @@ footer {
       margin-right: 2%; }
     .talks .site-talk:last-child {
       margin-left: 2%; }
+
+.section-do {
+  overflow: hidden;
+  *zoom: 1;
+  padding: 50px 0px 0px; }
+  .section-do .button {
+    margin-top: 58px; }
+  .section-do .large-heading {
+    font-weight: normal;
+    text-transform: none;
+    font-size: 36px; }
+  .section-do .left, .section-do .right {
+    width: 50%;
+    display: inline-block;
+    vertical-align: top; }
+  .section-do .right {
+    float: right;
+    text-align: center; }
+  .section-do.third-size {
+    padding: 0px; }
+    .section-do.third-size .left {
+      width: 33%; }
+      .section-do.third-size .left .button {
+        margin-top: 10px; }
+      .section-do.third-size .left .item-description {
+        font-size: 18px; }
+    .section-do.third-size .right {
+      width: 66%; }
+
+.button {
+  display: inline-block;
+  padding: 10px 10px;
+  background: #32004b;
+  color: white;
+  border-radius: 5px;
+  font-family: "montserrat", sans-serif;
+  letter-spacing: 1px;
+  line-height: 150%;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0.2s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  margin-bottom: 3px; }
 
 .team .section-content {
   max-width: 950px; }
@@ -284,7 +358,7 @@ footer {
     height: 60px; }
 
 .about .section-content p {
-  max-width: 650px;
+  max-width: 550px;
   margin: 0px auto 20px; }
 .about .about-video {
   text-align: center; }
@@ -292,8 +366,13 @@ footer {
     height: 344px;
     width: 611px;
     margin: 50px auto; }
+.about h3 {
+  margin-top: 30px;
+  margin-bottom: 20px; }
 .about .about-section-group {
-  margin-top: 20px; }
+  margin-top: 20px;
+  max-width: 600px;
+  margin: 0px auto; }
   .about .about-section-group .about-section {
     border-bottom: 1px solid #ececec;
     padding: 15px 0px; }
@@ -304,19 +383,29 @@ footer {
       border-bottom: 0px solid; }
     .about .about-section-group .about-section .item-heading {
       margin-bottom: 7px;
-      width: 30%;
+      width: 20%;
       padding-right: 0%;
       display: inline-block;
-      vertical-align: top; }
+      vertical-align: top;
+      text-align: right; }
     .about .about-section-group .about-section .item-subheading {
-      width: 65%;
+      width: 75%;
       margin-left: 4%;
       display: inline-block;
       vertical-align: top; }
 
+.portrait {
+  background-image: url("/assets/images/dr-bill-moore.png");
+  background-size: cover;
+  background-position: center center;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  margin: 0px auto; }
+
 .blog .section-content {
   text-align: center;
-  max-width: 450px;
+  max-width: 550px;
   position: relative; }
   .blog .section-content .blog-entry {
     margin-bottom: 10px; }
@@ -349,49 +438,6 @@ footer {
     padding-top: 0px;
     border-top: 0px solid; }
 
-.single-page {
-  padding: 140px 0px; }
-  .single-page h1 {
-    font-size: 59px; }
-  .single-page .section-content {
-    max-width: 960px; }
-    .single-page .section-content .company-images {
-      margin-bottom: 20px; }
-      .single-page .section-content .company-images .post-it {
-        width: 500px;
-        vertical-align: top;
-        margin-bottom: 10px; }
-      .single-page .section-content .company-images .streets {
-        margin-top: 95px;
-        width: 315px;
-        float: right; }
-      .single-page .section-content .company-images .war-room {
-        width: 388px;
-        float: right;
-        margin-top: -38px;
-        margin-right: 20px;
-        margin-left: 52px;
-        margin-bottom: 25px; }
-    .single-page .section-content .smaller-content {
-      max-width: 640px;
-      margin: 0px auto; }
-    .single-page .section-content .job-listing {
-      max-width: 100%;
-      padding: 22px 0px 30px;
-      font-size: 19px; }
-      .single-page .section-content .job-listing h3 {
-        margin-bottom: 30px; }
-        .single-page .section-content .job-listing h3 a {
-          color: black; }
-      .single-page .section-content .job-listing:first-child {
-        padding-top: 40px; }
-      .single-page .section-content .job-listing:last-child {
-        border-bottom: 0px solid; }
-
-.more-link {
-  color: black;
-  margin-top: 20px; }
-
 .faux-underline-large {
   display: inline-block;
   position: relative;
@@ -408,22 +454,3 @@ footer {
   color: #505050; }
 .faux-underline-large:hover {
   text-decoration: none; }
-
-.instagram-feed {
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  height: 150px; }
-  .instagram-feed a {
-    display: inline-block; }
-  .instagram-feed img {
-    width: initial;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
-    opacity: 0.2; }
-    .instagram-feed img:hover {
-      filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-      opacity: 1; }
-
-.twitter-link img {
-  height: 54px;
-  margin-bottom: 85px; }
