--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -59,6 +59,9 @@ h1 {
   letter-spacing: -2px;
   text-transform: uppercase;
   line-height: 100%; }
+  h1.small-header {
+    font-weight: normal;
+    font-size: 50px; }
 
 h2 {
   font-size: 16px;
@@ -311,7 +314,7 @@ footer {
 
 .button {
   display: inline-block;
-  padding: 10px 10px;
+  padding: 10px 20px;
   background: #32004b;
   color: white;
   border-radius: 5px;
@@ -324,6 +327,11 @@ footer {
   transition-delay: 0.2s;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   margin-bottom: 3px; }
+
+.books .book {
+  display: inline-block;
+  vertical-align: top;
+  width: 24%; }
 
 .team .section-content {
   max-width: 950px; }
@@ -405,17 +413,11 @@ footer {
 
 .blog .section-content {
   text-align: center;
-  max-width: 550px;
+  max-width: 660px;
   position: relative; }
   .blog .section-content .blog-entry {
-    margin-bottom: 10px; }
-    .blog .section-content .blog-entry:last-child {
-      margin-bottom: 0px; }
-  .blog .section-content .item-heading.large-heading {
-    margin-bottom: 2px; }
-    .blog .section-content .item-heading.large-heading a {
-      font-weight: 700;
-      color: rgba(0, 0, 0, 0.8); }
+    margin-bottom: 20px;
+    text-align: left; }
 
 .jobs .section-content {
   text-align: center;
