--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   <meta name="description" content="{{ site.description }}">
   {% endif %}
   <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/assets/application.css" />
   <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
