--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -294,6 +294,8 @@ footer
 .section-do
   +clearfix
   padding: 50px 0px 0px
+  &:last-child
+    padding-top: 0px
   .button
     margin-top: 58px
   .large-heading
@@ -376,7 +378,7 @@ footer
 .about
   .section-content
     p
-      max-width: 550px
+      max-width: 650px
       margin: 0px auto 20px
   .about-video
     text-align: center
@@ -389,7 +391,7 @@ footer
     margin-bottom: 20px
   .about-section-group
     margin-top: 20px
-    max-width: 600px
+    max-width: 720px
     margin: 0px auto
     .about-section
       border-bottom: 1px solid rgb(236, 236, 236)
@@ -401,13 +403,12 @@ footer
         border-bottom: 0px solid
       .item-heading
         margin-bottom: 7px
-        width: 20%
+        width: 30%
         padding-right: 0%
         display: inline-block
         vertical-align: top
-        text-align: right
       .item-subheading
-        width: 75%
+        width: 65%
         margin-left: 4%
         display: inline-block
         vertical-align: top
