--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -288,6 +288,8 @@ footer {
   overflow: hidden;
   *zoom: 1;
   padding: 50px 0px 0px; }
+  .section-do:last-child {
+    padding-top: 0px; }
   .section-do .button {
     margin-top: 58px; }
   .section-do .large-heading {
@@ -366,7 +368,7 @@ footer {
     height: 60px; }
 
 .about .section-content p {
-  max-width: 550px;
+  max-width: 650px;
   margin: 0px auto 20px; }
 .about .about-video {
   text-align: center; }
@@ -379,7 +381,7 @@ footer {
   margin-bottom: 20px; }
 .about .about-section-group {
   margin-top: 20px;
-  max-width: 600px;
+  max-width: 720px;
   margin: 0px auto; }
   .about .about-section-group .about-section {
     border-bottom: 1px solid #ececec;
@@ -391,13 +393,12 @@ footer {
       border-bottom: 0px solid; }
     .about .about-section-group .about-section .item-heading {
       margin-bottom: 7px;
-      width: 20%;
+      width: 30%;
       padding-right: 0%;
       display: inline-block;
-      vertical-align: top;
-      text-align: right; }
+      vertical-align: top; }
     .about .about-section-group .about-section .item-subheading {
-      width: 75%;
+      width: 65%;
       margin-left: 4%;
       display: inline-block;
       vertical-align: top; }
