--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -414,7 +414,7 @@ footer
         vertical-align: top
 
 .portrait
-  background-image: url('/assets/images/dr-bill-moore.png')
+  background-image: url('/assets/images/bill_vimeo.jpg')
   background-size: cover
   background-position: center center
   width: 200px
