--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -139,7 +139,7 @@ footer {
   text-align: center; }
   .hero-unit h1, .large-footer h1 {
     padding-top: 71px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-weight: normal;
     text-transform: none; }
   .hero-unit h1, .hero-unit h3, .hero-unit .border, .large-footer h1, .large-footer h3, .large-footer .border {
@@ -169,6 +169,12 @@ footer {
   margin-bottom: 20px; }
 .large-footer h1 {
   font-size: 48px; }
+  .large-footer h1.small-width {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    line-height: 130%; }
 
 .more-info .section-content .client-section {
   text-align: center;
@@ -182,6 +188,8 @@ footer {
   font-size: 16px; }
   .more-info .section-content .client-section a {
     color: black; }
+  .more-info .section-content .client-section .faux-underline-large::before {
+    border-bottom: 1px solid #333; }
 .more-info .section-content .info-section-group {
   margin-bottom: 20px; }
   .more-info .section-content .info-section-group .info-section {
@@ -291,11 +299,14 @@ footer {
   .section-do:last-child {
     padding-top: 0px; }
   .section-do .button {
-    margin-top: 58px; }
+    margin-top: 58px;
+    font-size: 15px; }
   .section-do .large-heading {
     font-weight: normal;
     text-transform: none;
-    font-size: 36px; }
+    font-size: 36px;
+    line-height: 117%;
+    margin-bottom: 13px; }
   .section-do .left, .section-do .right {
     width: 50%;
     display: inline-block;
@@ -313,6 +324,8 @@ footer {
         font-size: 18px; }
     .section-do.third-size .right {
       width: 66%; }
+  .section-do.last .button {
+    margin-top: 100px; }
 
 .button {
   display: inline-block;
@@ -419,6 +432,8 @@ footer {
   .blog .section-content .blog-entry {
     margin-bottom: 20px;
     text-align: left; }
+    .blog .section-content .blog-entry .faux-underline-large::before {
+      margin-top: 0.2em; }
 
 .jobs .section-content {
   text-align: center;
