--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,16 +1,16 @@
 body {
   padding: 0px;
   margin: 0px;
-  font-family: "Lora", Arial, Helvetica, sans-serif;
   letter-spacing: 0.01rem;
-  font-weight: 400;
   font-style: normal;
   font-size: 18px;
-  line-height: 1.6em;
-  text-rendering: optimizeLegibility;
+  font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
+  font-weight: 400;
+  line-height: 1.6em;
+  text-rendering: optimizeLegibility;
   color: rgba(0, 0, 0, 0.8); }
   body a {
     color: #39c; }
@@ -49,9 +49,9 @@ ol:last-child, p:last-child {
 
 h1, h3 {
   line-height: 148%;
-  font-weight: normal;
-  font-family: "montserrat", sans-serif;
-  font-weight: 700; }
+  font-family: "franklin-gothic-urw", sans-serif;
+  font-weight: 400;
+  letter-spacing: 1px; }
 
 h1 {
   font-size: 59px;
@@ -60,21 +60,29 @@ h1 {
   text-transform: uppercase;
   line-height: 100%; }
   h1.small-header {
-    font-weight: normal;
+    font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    font-weight: 400;
     font-size: 50px; }
 
 h2 {
-  font-size: 16px;
+  font-size: 15px;
   letter-spacing: 1px;
-  font-weight: normal; }
+  font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
+  font-weight: 400; }
 
 h3 {
   margin-bottom: 10px;
   text-align: center;
-  color: rgba(0, 0, 0, 0.8); }
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 30px; }
 
 a {
-  font-weight: 400;
   text-decoration: none; }
 
 a, a:active, a:focus {
@@ -108,21 +116,22 @@ header {
   padding-top: 15px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 15px;
   color: #ccc; }
   header a {
     color: rgba(0, 0, 0, 0.8);
     display: inline-block;
     padding: 0px;
     margin: 0px 10px;
-    font-family: "montserrat", sans-serif;
+    font-family: "franklin-gothic-urw", sans-serif;
+    font-weight: 400;
     letter-spacing: 1px;
     line-height: 150%; }
 
 footer {
   text-align: center;
   padding: 10px 20px;
-  font-size: 12px;
+  font-size: 15px;
   color: #6f6f6f; }
 
 .wrapper {
@@ -140,15 +149,22 @@ footer {
   .hero-unit h1, .large-footer h1 {
     padding-top: 71px;
     margin-bottom: 15px;
-    font-weight: normal;
-    text-transform: none; }
+    text-transform: none;
+    font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    font-weight: 400; }
   .hero-unit h1, .hero-unit h3, .hero-unit .border, .large-footer h1, .large-footer h3, .large-footer .border {
     z-index: 2;
     position: relative; }
   .hero-unit h3, .large-footer h3 {
     margin: 0px auto;
-    font-size: 24px;
-    font-weight: normal;
+    font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    font-weight: 400;
     text-transform: none;
     max-width: 533px;
     margin-top: 20px; }
@@ -170,7 +186,7 @@ footer {
 .large-footer h1 {
   font-size: 48px; }
   .large-footer h1.small-width {
-    width: 500px;
+    max-width: 376px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
@@ -184,10 +200,11 @@ footer {
   -moz-column-width: 180px;
   -webkit-column-width: 180px;
   column-width: 180px;
-  margin: 0px auto;
-  font-size: 16px; }
+  margin: 0px auto; }
   .more-info .section-content .client-section a {
     color: black; }
+  .more-info .section-content .client-section .client {
+    margin-bottom: 3px; }
   .more-info .section-content .client-section .faux-underline-large::before {
     border-bottom: 1px solid #333; }
 .more-info .section-content .info-section-group {
@@ -201,10 +218,11 @@ footer {
       width: 93%; }
 
 .item-heading {
-  font-family: "montserrat", sans-serif;
-  font-weight: 700;
+  font-family: "franklin-gothic-urw", sans-serif;
+  font-weight: 400;
+  letter-spacing: 1px;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 15px;
   line-height: 148%;
   text-align: left; }
   .item-heading.large-heading {
@@ -213,14 +231,12 @@ footer {
     margin-bottom: 7px; }
 
 .item-subheading {
-  font-size: 14px;
+  font-size: 18px;
   text-align: left;
   line-height: 144%; }
-  .item-subheading.large-subheading {
-    font-size: 16px; }
 
 .small-note, .item-supheading {
-  font-size: 14px;
+  font-size: 15px;
   font-style: italic;
   color: #8B8989; }
 
@@ -299,12 +315,16 @@ footer {
   .section-do:last-child {
     padding-top: 0px; }
   .section-do .button {
-    margin-top: 58px;
+    margin-top: 77px;
     font-size: 15px; }
   .section-do .large-heading {
-    font-weight: normal;
+    font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    font-weight: 400;
     text-transform: none;
-    font-size: 36px;
+    font-size: 51px;
     line-height: 117%;
     margin-bottom: 13px; }
   .section-do .left, .section-do .right {
@@ -325,7 +345,7 @@ footer {
     .section-do.third-size .right {
       width: 66%; }
   .section-do.last .button {
-    margin-top: 100px; }
+    margin-top: 133px; }
 
 .button {
   display: inline-block;
@@ -333,7 +353,8 @@ footer {
   background: #32004b;
   color: white;
   border-radius: 5px;
-  font-family: "montserrat", sans-serif;
+  font-family: "franklin-gothic-urw", sans-serif;
+  font-weight: 400;
   letter-spacing: 1px;
   line-height: 150%;
   text-transform: uppercase;
@@ -391,7 +412,11 @@ footer {
     margin: 50px auto; }
 .about h3 {
   margin-top: 30px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  font-size: 30px;
+  text-transform: uppercase; }
+  .about h3.small {
+    font-size: 22px; }
 .about .about-section-group {
   margin-top: 20px;
   max-width: 720px;
@@ -406,12 +431,12 @@ footer {
       border-bottom: 0px solid; }
     .about .about-section-group .about-section .item-heading {
       margin-bottom: 7px;
-      width: 30%;
+      width: 25%;
       padding-right: 0%;
       display: inline-block;
       vertical-align: top; }
     .about .about-section-group .about-section .item-subheading {
-      width: 65%;
+      width: 70%;
       margin-left: 4%;
       display: inline-block;
       vertical-align: top; }
