--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -17,9 +17,8 @@ $heading-size: 30px
   font-weight: 400
 
 @mixin heading-font
-  font-family: "franklin-gothic-urw", sans-serif
-  font-weight: 400
-  letter-spacing: 1px
+  font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif
+  font-weight: 800
 
 body
   padding: 0px
