--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="/assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/assets/application.css" />
-  <script src="//use.typekit.net/odn0pxa.js"></script>
+  <script src="//use.typekit.net/uqw5hvk.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
