--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -4,7 +4,7 @@
 @import "compass/css3"
 
 $purple: #32004b
-$small-font-size: 15px
+$small-font-size: 16px
 $base-font-size: 18px
 $large-heading-size: 51px
 $heading-size: 30px
@@ -228,7 +228,7 @@ footer
     margin-bottom: 7px
 
 .item-subheading
-  font-size: $base-font-size
+  font-size: $small-font-size
   text-align: left
   line-height: 144%
 
