--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -252,10 +252,16 @@ footer
       margin-left: 0px
     &:last-child
       margin-left: 0px
+    .source
+      margin-top: 8px
+      margin-left: 19px
     .item-heading
-      margin-bottom: 1px
+      line-height: 130%
+      margin-top: 15px
     .item-supheading
       margin-bottom: 6px
+    .item-subheading
+      margin-top: 8px
     .case-study-image
       width: 100%
       height: 150px
