--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -96,7 +96,7 @@ section:eq(2) {
 section {
   padding: 80px 0px; }
   section.purple-section {
-    background: #f3f0f4; }
+    background: #F4EEEF; }
   section .section-content {
     max-width: 950px;
     padding: 0px 20px;
@@ -107,7 +107,7 @@ section {
     display: block;
     height: 3px;
     margin-bottom: 30px;
-    background: #32004b; }
+    background: #9D1020; }
 
 header {
   top: 0px;
@@ -136,7 +136,7 @@ footer {
   margin: 0px auto; }
 
 .separate {
-  background: #32004b;
+  background: #9D1020;
   height: 20px;
   width: 100%; }
 
@@ -272,7 +272,7 @@ footer {
       margin-bottom: 10px; }
 
 .font-heading {
-  color: #32004b;
+  color: #CDCDCD;
   margin-bottom: 10px; }
 
 .more-section-group {
@@ -286,6 +286,8 @@ footer {
       margin-left: 0px; }
     .more-section-group .more-section:last-child {
       margin-left: 0px; }
+    .more-section-group .more-section .border {
+      background-color: black; }
     .more-section-group .more-section .item-heading {
       margin-bottom: 5px;
       text-align: center; }
@@ -357,23 +359,25 @@ footer {
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background: #32004b;
+  background: #D23F31;
   color: white;
   border-radius: 5px;
-  font-family: "adobe-garamond-pro", Georgia, Cambria, "Times New Roman", Times, serif;
-  font-weight: 800;
+  font-family: sans-serif;
+  font-weight: bold;
   line-height: 150%;
-  text-transform: uppercase;
   cursor: pointer;
-  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0.2s;
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   margin-bottom: 3px; }
+  .button:hover {
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2); }
 
-.books .book {
-  display: inline-block;
-  vertical-align: top;
-  width: 24%; }
+.books {
+  padding-top: 0px; }
+  .books .book {
+    display: inline-block;
+    vertical-align: top;
+    width: 24%; }
 
 .team .section-content {
   max-width: 950px; }
@@ -448,6 +452,8 @@ footer {
       display: inline-block;
       vertical-align: top;
       font-size: 18px; }
+    .about .about-section-group .about-section .faux-underline-large::before {
+      margin-top: 0.25em; }
 
 .portrait {
   background-image: url("/assets/images/bill_vimeo.jpg");
