--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header id="main-header">
+  <a href="/#about" class="faux-underline-large">About</a>
   <a href="/#coaching" class="faux-underline-large">Coaching</a>
   <a href="/#speaking" class="faux-underline-large">Speaking</a>
   <a href="/#writing" class="faux-underline-large">Writing</a>
