--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -259,6 +259,8 @@ footer
       margin-left: 0px
     &:last-child
       margin-left: 0px
+    form
+      text-align: left
     .source
       margin-top: 8px
       margin-left: 19px
