style updates for books

--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -247,6 +247,7 @@ footer
 .item-supheading
   text-align: left
   margin-top: -8px
+  line-height: 133%
 
 .case-studies, .section-books
   text-align: center
