--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -244,7 +244,8 @@ footer {
 
 .item-supheading {
   text-align: left;
-  margin-top: -8px; }
+  margin-top: -8px;
+  line-height: 133%; }
 
 .case-studies, .section-books {
   text-align: center; }
