--- a/assets/stylesheets/responsive.css.sass
+++ b/assets/stylesheets/responsive.css.sass
@@ -13,15 +13,9 @@
       &:last-child
         display: none
 
-  // Does not work well on mobile so disable
-  .about-video
-    display: none
-
-  .hero-unit
-    padding-bottom: 71px
-    h1
-      font-size: 53px
-      padding-top: 30px
+  .section-do, .section-do.third-size
+    .left, .right
+      width: 100%
 
   .about
     .about-section-group
@@ -30,10 +24,15 @@
           width: 100%
           margin-left: 0px
 
-  .case-studies
-    .case-study
+  .case-studies, .section-books
+    .case-study, .book
       width: 100%
       margin: 0px 0px 30px
+
+  .more-section-group
+    .more-section
+      width: 100%
+      margin: 10px 0px
 
   .more-info
     .section-content
