improve formatting of book images

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -279,6 +279,10 @@ footer {
       background-position: top center;
       margin-bottom: 10px; }
 
+.section-books .book .case-study-image {
+  background-color: white;
+  background-size: contain; }
+
 .font-heading {
   color: #9D1020;
   margin-bottom: 10px; }
