--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -281,6 +281,10 @@ footer
       background-position: top center
       margin-bottom: 10px
 
+.section-books .book .case-study-image
+  background-color: white
+  background-size: contain
+
 .font-heading
   color: $color
   margin-bottom: 10px
