--- a/assets/stylesheets/responsive.css
+++ b/assets/stylesheets/responsive.css
@@ -27,6 +27,11 @@
     width: 100%;
     margin: 10px 0px; }
 
+  iframe {
+    width: 338px;
+    height: 263px;
+    margin-top: 32px; }
+
   .more-info .section-content .client-section {
     -moz-column-count: 2;
     -webkit-column-count: 2;
