--- a/assets/stylesheets/responsive.css.sass
+++ b/assets/stylesheets/responsive.css.sass
@@ -34,6 +34,11 @@
       width: 100%
       margin: 10px 0px
 
+  iframe
+    width: 338px
+    height: 263px
+    margin-top: 32px
+
   .more-info
     .section-content
       .client-section
