--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -113,7 +113,8 @@ section
     .button
       background-color: white
       color: $color
-
+    .small
+      margin-bottom: 35px
   .section-content
     max-width: 950px
     padding: 0px 20px
@@ -203,9 +204,9 @@ footer
       line-height: 130%
 
 #help-become
-  margin-top: -80px
-  margin-bottom: -80px
-  padding: 70px 0px
+  margin-top: -60px
+  margin-bottom: -60px
+  padding: 40px 0 35px
 
 .more-info
   .section-content
